[project]
name = "python-lab"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lawrencelee0205", email = "lawrencelee0205.dev@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_lab"]
